[project]
name = "vr-vis"
version = "0.1.0"
description = ""
authors = [
    {name = "Emily Ekstrum",email = "156148558+emilyekstrum@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "vr_vis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
